@@ -2,6 +2,8 @@ Interim changes since PyNDN v2.3beta1 (2016-05-13)
 --------------------------------------------------
 
 Changes
+* http://redmine.named-data.net/issues/3337 In MetaInfo, added get/setOtherTypeCode
+  to allow unrecognized content type codes in the packet.
 * In FilePrivateKeyStorage.generateKeyPair, update mapping.txt for the generated key.
 
 Bug fixes
